--- a/assignment-5/a5-details-out-of-stock.html
+++ b/assignment-5/a5-details-out-of-stock.html
@@ -69,6 +69,8 @@
                     </select>
                 </div>
                 <div class="a5-details-add-to-bag-out-of-stock">Add to bag</div>
+                <div class="a5-details-schedule-order">Want to order buns for a later date? <a href="">Schedule future
+                        batch order</a></div>
             </div>
         </div>
         <div class=class="a5-details-bun-extra-info">
