--- a/assignment-5/a5-details-available.html
+++ b/assignment-5/a5-details-available.html
@@ -102,13 +102,13 @@
                     <div class="a5-bun-option-row">
                         <div class="a5-bun-option">
                             <div class="a5-bun-option-card">
-                                <img class="a5-bun-image" src="./assets/bun6.jpeg" alt="Image for Walnut Bun">
+                                <img class="a5-bun-image" src="./assets/bun9.jpeg" alt="Image for Walnut Bun">
                             </div>
                             <div class="a5-bun-info">
-                                <span class="a5-bun-out-of-stock">Out of stock!</span>
-                                <span class="a5-bun-price">$5.50</span>
+                                <span class="a5-bun-availability">12 buns left!</span>
+                                <span class="a5-bun-price">$8</span>
                             </div>
-                            <h3 class="a5-bun-name">Walnut</h3>
+                            <h3 class="a5-bun-name">Blackberry</h3>
                         </div>
                     </div>
                 </div>
