--- a/homework_5/a5-browse.html
+++ b/homework_5/a5-browse.html
@@ -146,9 +146,12 @@
             </ul>
         </div>
         <div class="a5-footer-misc-links">
-            <li class="footer-item"><a class="a5-footer-link a5-footer-misc-link" href="a5-contact.html">Contact Us</a>
-            </li>
-            <li class="footer-item"><a class="a5-footer-link a5-footer-misc-link" href="#">FAQs</a></li>
+            <ul class="a5-footer-links">
+                <li class="footer-item"><a class="a5-footer-link a5-footer-misc-link" href="a5-contact.html">Contact
+                        Us</a>
+                </li>
+                <li class="footer-item"><a class="a5-footer-link a5-footer-misc-link" href="#">FAQs</a></li>
+            </ul>
         </div>
     </footer>
 </body>
